Edited the CSS file to fix layout issues and added a calendar div in the Bookings.html file.

--- a/Part 1/Web Pages/CSS/style.css
+++ b/Part 1/Web Pages/CSS/style.css
@@ -9,7 +9,11 @@ header {
     position: sticky;
     color: white;
     margin: 0;
-    padding: 10px 0;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+}
+.contact-header {
     text-align: center;
 }
 nav {
@@ -24,17 +28,20 @@ nav ul {
     padding: 0;
     margin: 0;
     text-decoration-color: azure;
+    position: relative;
 }
 nav ul li {
     margin: 0 15px;
     list-style: none;  
     text-decoration-color: azure;
+    position: relative;
 }
 nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
     text-decoration-color: azure;
+    position: relative;
 }
 nav ul li a:hover {
     text-decoration: underline;
@@ -46,11 +53,10 @@ nav ul li a:hover {
     border-radius: 10px;
     text-align: center;
     padding: 40px 100px;
+    background-color: #d9dcd6;
 }
 .hero-buttons ul {
     display: flex;
-    flex-direction: row;
-    gap: 100px;
     padding: 0;
     margin: 20px 0 0 0;
     list-style: none;
@@ -71,6 +77,7 @@ nav ul li a:hover {
 }
 .hero-buttons li {
     font-size: 16px;
+    background-color: #16425b;
     cursor: pointer;
     border-radius: 30px;
 }
@@ -103,7 +110,7 @@ nav ul li a:hover {
 .booking-button {
     margin-top: 20px;
     text-align: center;
-    border: solid 2px #2f6690;
+    
     border-radius: 30px;
 }
 .booking-button a {
